--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <button id="buttThree">HARDCORE</button>
     </div>
     <div class="container">
+        
+    </div>
+    <div id="result" class="hidden">
+        hai perso
     </div>
 
 
